Update swapchain, frames in flight

--- a/Caustic/imgui.ini
+++ b/Caustic/imgui.ini
@@ -24,8 +24,46 @@ Pos=697,398
 Size=292,162
 Collapsed=0
 
+[Window][Advanced Engine Controls]
+Pos=1237,233
+Size=370,701
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Advanced Engine Statistics]
+Pos=1573,58
+Size=370,564
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Viewport]
+Pos=1,58
+Size=1234,876
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Background Color]
+Pos=1573,624
+Size=370,84
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][stat]
+Pos=1237,58
+Size=370,173
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace   ID=0xCDC34B94 Window=0x41896AB8 Pos=384,346 Size=1606,876 Split=X
-  DockNode  ID=0x00000001 Parent=0xCDC34B94 SizeRef=1054,876 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0xCDC34B94 SizeRef=550,876 Selected=0xE87781F4
+DockSpace       ID=0xCDC34B94 Window=0x41896AB8 Pos=446,324 Size=1606,876 Split=X
+  DockNode      ID=0x00000003 Parent=0xCDC34B94 SizeRef=1234,876 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1054,876 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=550,876 Selected=0xE87781F4
+  DockNode      ID=0x00000004 Parent=0xCDC34B94 SizeRef=370,876 Split=Y Selected=0x58A7DA77
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=218,650 Split=Y Selected=0x58A7DA77
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=370,564 Selected=0x58A7DA77
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=370,84 Selected=0x8E9CCF8E
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=218,224 Split=Y Selected=0x78A711D8
+      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=370,173 Selected=0x38A2FF96
+      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=370,701 Selected=0x78A711D8
 
