descriptor sets uniform buffers

--- a/Caustic/imgui.ini
+++ b/Caustic/imgui.ini
@@ -1,16 +1,16 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1608,935
+Size=714,935
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=1057,58
-Size=550,876
+Size=550,729
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=147,144
 Size=400,400
 Collapsed=0
 
@@ -25,8 +25,8 @@ Size=292,162
 Collapsed=0
 
 [Window][Advanced Engine Controls]
-Pos=1237,233
-Size=370,701
+Pos=1237,58
+Size=370,876
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -37,10 +37,10 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Viewport]
-Pos=1,58
-Size=1234,876
+Pos=1,48
+Size=712,739
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Background Color]
 Pos=1573,624
@@ -50,20 +50,38 @@ DockId=0x00000008,0
 
 [Window][stat]
 Pos=1237,58
-Size=370,173
+Size=370,438
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Debug]
+Pos=1,789
+Size=712,145
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Delete?]
+Pos=496,320
+Size=311,182
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=496,313
+Size=477,276
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xCDC34B94 Window=0x41896AB8 Pos=446,324 Size=1606,876 Split=X
-  DockNode      ID=0x00000003 Parent=0xCDC34B94 SizeRef=1234,876 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1054,876 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=550,876 Selected=0xE87781F4
-  DockNode      ID=0x00000004 Parent=0xCDC34B94 SizeRef=370,876 Split=Y Selected=0x58A7DA77
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=218,650 Split=Y Selected=0x58A7DA77
-      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=370,564 Selected=0x58A7DA77
-      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=370,84 Selected=0x8E9CCF8E
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=218,224 Split=Y Selected=0x78A711D8
-      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=370,173 Selected=0x38A2FF96
-      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=370,701 Selected=0x78A711D8
+DockSpace           ID=0xCDC34B94 Window=0x41896AB8 Pos=1138,202 Size=712,886 Split=Y
+  DockNode          ID=0x0000000B Parent=0xCDC34B94 SizeRef=2556,739 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000B SizeRef=1054,876 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1234,876 Split=X
+        DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1234,876 CentralNode=1 Selected=0x13926F0B
+        DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=370,876 Split=Y Selected=0x58A7DA77
+          DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=370,564 Selected=0x58A7DA77
+          DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=370,84 Selected=0x8E9CCF8E
+      DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=370,876 Split=Y Selected=0x38A2FF96
+        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=370,438 Selected=0x38A2FF96
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=370,436 Selected=0x78A711D8
+    DockNode        ID=0x00000002 Parent=0x0000000B SizeRef=550,876 Selected=0xE87781F4
+  DockNode          ID=0x0000000C Parent=0xCDC34B94 SizeRef=2556,145 Selected=0x392A5ADD
 
