--- a/imgui.ini
+++ b/imgui.ini
@@ -29,10 +29,10 @@ Size=229,204
 Collapsed=0
 
 [Window][Advanced Engine Controls]
-Pos=1123,624
-Size=484,310
+Pos=1123,58
+Size=484,700
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Advanced Engine Statistics]
 Pos=1123,58
@@ -46,10 +46,18 @@ Size=1120,876
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][stat]
+Pos=1123,760
+Size=484,174
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=640,374 Size=1606,876 Split=X
-  DockNode    ID=0x00000001 Parent=0xCDC34B94 SizeRef=1120,876 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0xCDC34B94 SizeRef=484,876 Split=Y Selected=0x58A7DA77
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=218,564 Selected=0x58A7DA77
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=218,310 Selected=0x78A711D8
+DockSpace       ID=0xCDC34B94 Window=0x41896AB8 Pos=239,292 Size=1606,876 Split=X
+  DockNode      ID=0x00000001 Parent=0xCDC34B94 SizeRef=1120,876 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0xCDC34B94 SizeRef=484,876 Split=Y Selected=0x58A7DA77
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=218,564 Selected=0x58A7DA77
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=218,310 Split=Y Selected=0x78A711D8
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=484,700 Selected=0x78A711D8
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=484,174 Selected=0x38A2FF96
 
