--- a/Caustic/imgui.ini
+++ b/Caustic/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1608,935
+Size=2568,1404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -37,8 +37,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Viewport]
-Pos=1,48
-Size=1606,739
+Pos=6,48
+Size=2148,1350
 Collapsed=0
 DockId=0x00000003,0
 
@@ -55,8 +55,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Debug]
-Pos=1,789
-Size=1606,145
+Pos=2156,48
+Size=406,1350
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -71,8 +71,8 @@ Size=477,276
 Collapsed=0
 
 [Docking][Data]
-DockSpace           ID=0xCDC34B94 Window=0x41896AB8 Pos=346,214 Size=1606,886 Split=Y
-  DockNode          ID=0x0000000B Parent=0xCDC34B94 SizeRef=2556,739 Split=X
+DockSpace           ID=0xCDC34B94 Window=0x41896AB8 Pos=2,40 Size=2556,1350 Split=X
+  DockNode          ID=0x0000000B Parent=0xCDC34B94 SizeRef=2148,886 Split=X
     DockNode        ID=0x00000001 Parent=0x0000000B SizeRef=1054,876 Split=X
       DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1234,876 Split=X
         DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1234,876 CentralNode=1 Selected=0x13926F0B
@@ -83,5 +83,5 @@ DockSpace           ID=0xCDC34B94 Window=0x41896AB8 Pos=346,214 Size=1606,886 Sp
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=370,438 Selected=0x38A2FF96
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=370,436 Selected=0x78A711D8
     DockNode        ID=0x00000002 Parent=0x0000000B SizeRef=550,876 Selected=0xE87781F4
-  DockNode          ID=0x0000000C Parent=0xCDC34B94 SizeRef=2556,145 Selected=0x392A5ADD
+  DockNode          ID=0x0000000C Parent=0xCDC34B94 SizeRef=406,886 Selected=0x392A5ADD
 
